@@ -10,7 +10,7 @@ Author = "Paul Snart"
 Website = "http://www.facebook.com/KingBossMods"
 Email = "kingbossmods@gmail.com"
 
-Version = "1.3.7.618"
+Version = "1.3.7.619"
 
 Environment = "1.9", "1.10", "1.11", "2.0"
 
